syntax = "proto3";
package com.wavesplatform.api.grpc;
import "address.proto";
import "transactions.proto";
import "google/protobuf/empty.proto";

service TransactionsApi {
    rpc TransactionsByAddress (TransactionsByAddressRequest) returns (stream SignedTransaction);
    rpc TransactionById (TransactionByIdRequest) returns (SignedTransaction);
    rpc UnconfirmedTransactions (google.protobuf.Empty) returns (stream SignedTransaction);
    rpc UnconfirmedTransactionById (TransactionByIdRequest) returns (SignedTransaction);
    rpc CalculateFee (Transaction) returns (CalculateFeeResponse);
    rpc SignTransaction (TransactionSignRequest) returns (SignedTransaction);
    rpc BroadcastTransaction (SignedTransaction) returns (SignedTransaction);
}

message TransactionsByAddressRequest {
    Recipient address = 1;
    bytes fromId = 2;
}

message TransactionByIdRequest {
    bytes transactionId = 1;
}

message CalculateFeeResponse {
    bytes assetId = 1;
    uint64 amount = 2;
}

message TransactionSignRequest {
    Transaction transaction = 1;
    bytes signer = 2;
}